src/test/ui/numbers-arithmetic/overflowing-rsh-4.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-rsh-4.rs:11:13
   |
LL |     let x = 2_i8 >> 17;
   |             ^^^^^^^^^^ attempt to shift right with overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-rsh-4.rs:7:9
   |
LL | #![deny(arithmetic_overflow, const_err)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

